[package]
name = "minesweeper-hex"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy2d_utilities = { git = "https://github.com/IInexerino/bevy2d_utilities.git", branch = "master" }
bevy-inspector-egui = "0.31"
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
